--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,5 @@ jobs:
     resource_class: large
     steps:
       - checkout
-      - run: docker-compose up
+      - run: docker images -a
+      - run: docker-compose --verbose up
